# 3-stack-foldability

./: .gitignore  BASELINE_CONDITIONS.md  COMMANDS.md  FINDINGS_3stack_grids.md  HANDOFFS.md  LAB_LOG.md  README.md  TEST_COVERAGE.md  TODO.md  app.js  context.md  fold.js  grid.js  hypothesis_2plus1_reduction.md  index.html  proof_q2_wrapping.md  pyproject.toml  pytest.ini  requirements.txt  search.js  serve.py  style.css
deprecated/: README.md
docs/: SESSIONS.md
experimental/: README.md  VERIFICATION.md  build_to_test_store.py  common.py  enumerate_twist.py  make_fold_bundle.py  render_intuition.py  run_2plus1_testing.py
explainer/: EXPLAINER.html  EXPLAINER.md  LESSON_twist_from_scratch.md  README.md  gen.py  lib.py  teach_twist.py
gui/: __init__.py  app.py  canvas.py  cli.py  config.py  connectivity.py  dispatch.py  foldfilter.py  geometry_client.py  results.py  runsummary.py  thumbs.py  tilings.py
py/: _bootstrap.py  _engine_entry.py  analyze_2plus1_reduction.py  analyze_loop_seams.py  analyze_reflection.py  analyze_twist.py  analyze_wrap.py  compute_twist_models.py  export_patterns.py  findings.py  fold.py  foldpattern.py  generate.py  make_foldsheets.py  migrate_to_sqlite.py  render_reduction.py  render_square.py  render_theta.py  reset_db.py  runner.py  search.py  store.py  twist_models.py  twostack.py
reference/: README.md
report/: .gitignore  README.md  package-lock.json  package.json  shoot.js
resources/: README.md  research_digest_2026-06-03.md
results/: 12x4_c73a48e0.json  3x2_700fb96e.json  6x4_23e3bc45.json  6x4_2stack_dc0a9114.json  (+15 more)
(+312 files in other folders)
